--- a/CostumeTest/ReservationGuest.csproj
+++ b/CostumeTest/ReservationGuest.csproj
@@ -1,7 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <AssemblyName>ReservationGuest</AssemblyName>
+    <RootNamespace>ReservationGuest</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
